<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/category_sort"
        android:title="@string/category_menu"
        android:orderInCategory="1"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_all"
                android:title="@string/list_0"
                />
            <item
                android:id="@+id/action_l1"
                android:title="@string/list_1" />
            <item
                android:id="@+id/action_l2"
                android:title="@string/list_2" />
            <item
                android:id="@+id/action_l3"
                android:title="@string/list_3" />
            <item
                android:id="@+id/action_l4"
                android:title="@string/list_4" />
        </menu>

    </item>
</menu>